<resources>
    <string name="app_name">小海湾</string>
    <string name="app_desc">一个海盗湾的第三方应用</string>
    <string name="title_app">@string/app_name</string>
    <string name="title_top">Top100</string>
    <string name="title_browse">分类浏览</string>
    <string name="title_recent">最新发布</string>
    <string name="title_settings">设置</string>
    <string name="nav_search">搜索</string>
    <string name="nav_browse">浏览</string>
    <string name="nav_recent">最新</string>
    <string name="nav_settings">设置</string>
    <string name="nav_help">帮助</string>
    <string name="nav_share">分享</string>
    <string name="nav_send">反馈</string>
    <string name="nav_about">关于</string>
    <string name="nav_more">更多</string>
    <string name="action_settings">设置</string>
    <string name="tips_searching">请输入搜索内容...</string>
    <string name="tips_init_failed">信息初始化失败！</string>
    <string name="category_list_parent_video">视频</string>
    <string name="category_list_parent_audio">音频</string>
    <string name="category_list_parent_app">应用</string>
    <string name="category_list_parent_game">游戏</string>
    <string name="category_list_parent_porn">哲学</string>
    <string name="category_list_parent_other">其他</string>
    <string name="category_list_sub_video_1">电影</string>
    <string name="category_list_sub_video_2">电影DVD</string>
    <string name="category_list_sub_video_3">MV</string>
    <string name="category_list_sub_video_4">电影片段</string>
    <string name="category_list_sub_video_5">电视节目</string>
    <string name="category_list_sub_video_6">手持设备</string>
    <string name="category_list_sub_video_7">高清电影</string>
    <string name="category_list_sub_video_8">高清电视</string>
    <string name="category_list_sub_video_9">3D</string>
    <string name="category_list_sub_video_10">其它</string>
    <string name="category_list_sub_audio_1">音乐</string>
    <string name="category_list_sub_audio_2">有声读物</string>
    <string name="category_list_sub_audio_3">声音片段</string>
    <string name="category_list_sub_audio_4">FLAC</string>
    <string name="category_list_sub_audio_5">其它</string>
    <string name="category_list_sub_app_1">Windows</string>
    <string name="category_list_sub_app_2">Mac</string>
    <string name="category_list_sub_app_3">Unix</string>
    <string name="category_list_sub_app_4">手持设备</string>
    <string name="category_list_sub_app_5">IOS</string>
    <string name="category_list_sub_app_6">Android</string>
    <string name="category_list_sub_app_7">其它系统</string>
    <string name="category_list_sub_game_1">PC</string>
    <string name="category_list_sub_game_2">Mac</string>
    <string name="category_list_sub_game_3">PSx</string>
    <string name="category_list_sub_game_4">XBOX</string>
    <string name="category_list_sub_game_5">Wii</string>
    <string name="category_list_sub_game_6">手持设备</string>
    <string name="category_list_sub_game_7">IOS</string>
    <string name="category_list_sub_game_8">Android</string>
    <string name="category_list_sub_game_9">其它</string>
    <string name="category_list_sub_porn_1">电影</string>
    <string name="category_list_sub_porn_2">电影DVD</string>
    <string name="category_list_sub_porn_3">图片</string>
    <string name="category_list_sub_porn_4">游戏</string>
    <string name="category_list_sub_porn_5">高清电影</string>
    <string name="category_list_sub_porn_6">电影片段</string>
    <string name="category_list_sub_porn_7">其它</string>
    <string name="category_list_sub_other_1">电子书</string>
    <string name="category_list_sub_other_2">漫画</string>
    <string name="category_list_sub_other_3">图片</string>
    <string name="category_list_sub_other_4">封面</string>
    <string name="category_list_sub_other_5">物理学</string>
    <string name="category_list_sub_other_6">其它</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
</resources>